--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.scss
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.scss
@@ -2,20 +2,18 @@
   {
     position: absolute;
     z-index:1;
-    width:100%;
-    height:100%;
-    max-height:200px;
+    width:80%;
+    height:80%;
+    max-height:150px;
     background:#F6F6F6;
     overflow-y:auto
   }
-  .states
-  {
-    padding:10px;
-    font-family:Arial
-  }
-  .states:hover{
-    background:#C2C2C2
-  }
+  #close {
+    float:right;
+    display:inline-block;
+    padding:2px 5px;
+    background:#ccc;
+}
 
 //   .ngb-dp-day {
 //   width: 4rem !important;
