Bloqueo de Cuartos
Actualizacion de Diseño Nva reserva
Agregado Boton Bloqueo de Cuartos
Funcionalidad de Bloqueo de Cuartos agregada

--- a/src/app/pages/reportes/customers/customers.component.html
+++ b/src/app/pages/reportes/customers/customers.component.html
@@ -1,10 +1,12 @@
 <div class="card card-custom gutter-b">
   <div class="card-header">
-    <div class="card-title">
+    <div class="card-title ">
       <h3 class="card-label">Lista de húespedes</h3>
     </div>
-    <div class="card-toolbar">
-      <button type="button" class="btn btn-primary" (click)="create()">Nueva Reserva</button>
+    <div  class="card-toolbar">
+      <button style="margin-right: 5px; background-color: #319dd7; color: white;;" type="button" class="btn" (click)="crearBloqueo()">Nuevo Bloqueo</button>
+
+      <button style="background-color: #319dd7; color: white; ;" type="button" class="btn " (click)="create()">Nueva Reserva</button>
     </div>
   </div>
 
