--- a/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/nueva-reserva-modal/nueva-reserva-modal.component.html
@@ -13,196 +13,197 @@
 
 </div>
 
-   <form (submit)="save(); open(content)" [formGroup]="formGroup" class="form form-label-right" style="background-color: rgb(224, 224, 224);">
-    <div class="overlay overlay-block cursor-default modal-body" style="background-color: rgb(224, 224, 224);">
+   <form (submit)="save(); open(content)" [formGroup]="formGroup" class="form form-label-right" style="background-color: #e6e9ed">
+    <div class="overlay overlay-block cursor-default modal-body" style="background-color: #e6e9ed">
 
-      <div class="form-group row" style="border:1px solid rgb(128, 128, 128);">
-              <div class="form-group hidden">
-                <div class="input-group">
-                  <input hidden name="datepicker"
-                         class="form-control"
-                         ngbDatepicker
-                         [footerTemplate]="footerTemplate"
-                         #datepicker="ngbDatepicker"
-                         [autoClose]="'outside'"
-                         (dateSelect)="onDateSelection($event)"
-                         [displayMonths]="1"
-                         [dayTemplate]="t"
-                         outsideDays="hidden"
-                         [startDate]="fromDate!"
-                         tabindex="-1">
-                  <ng-template #t let-date let-focused="focused">
-                    <span class="custom-day"
-                          [class.focused]="focused"
-                          [class.range]="isRange(date)"
-                          [class.faded]="isHovered(date) || isInside(date)"
-                          (mouseenter)="hoveredDate = date"
-                          (mouseleave)="hoveredDate = null">
-                      {{ date.day }}
-                    </span>
-                  </ng-template>
-                </div>
-              </div>
+<div class="row">
+<!--Hidden-->
+  <div class="form-group hidden">
+    <div class="input-group">
+      <input hidden name="datepicker"
+             class="form-control"
+             ngbDatepicker
+             [footerTemplate]="footerTemplate"
+             #datepicker="ngbDatepicker"
+             [autoClose]="'outside'"
+             (dateSelect)="onDateSelection($event)"
+             [displayMonths]="1"
+             [dayTemplate]="t"
+             outsideDays="hidden"
+             [startDate]="fromDate!"
+             tabindex="-1">
+      <ng-template #t let-date let-focused="focused">
+        <span class="custom-day"
+              [class.focused]="focused"
+              [class.range]="isRange(date)"
+              [class.faded]="isHovered(date) || isInside(date)"
+              (mouseenter)="hoveredDate = date"
+              (mouseleave)="hoveredDate = null">
+          {{ date.day }}
+        </span>
+      </ng-template>
+    </div>
+  </div>
+<!--Hidden-->
 
-              <div class="form-group col-lg-8">
-                  <label class="form-label">Selecciona Rango de Fecha</label>
+
+  <label style="color:#00506a; font-weight: bold;" class="form-label">Selecciona Rango de Fecha</label>
+  <div class="input-group mb-3 col-lg-9">
+    <div class="input-group-prepend">
+      <button style="border-top: 2px solid #dadcdf;border-bottom: 2px solid #dadcdf;border-left: 2px solid #dadcdf; background-color: transparent;" class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button">
+        <i class="fa fa-calendar icon"></i>
+      </button>
+    </div>
+    <input    #rango
+              type="text"
+              style="border-right: 2px solid #dadcdf;border-top: 2px solid #dadcdf;border-bottom: 2px solid #dadcdf; background-color: #e6e9ed; color: #02597e;"
+              class="form-control"
+              [value]="rangoFechas(dpFromDate.value,dpToDate.value)"
+              (click)="datepicker.toggle()">
+  </div>
+  <div class="input-group col-lg-3">
+    <div class="input-group-prepend">
+      <label style="padding-top: 15%; color:#00506a; font-weight: bold;">
+        Noches:
+      </label>
+    </div>
+    <label style="padding-left: 20%; padding-top: 2%;" class="font-weight-bold h1"> {{huesped.noches}}</label>
+  </div>
+   <!--Hidden-->
+   <input hidden      #dpToDate
+                      class="form-control" placeholder="yyyy-mm-dd"
+                      name="dpToDate"
+                      [value]="formatter.format(toDate)"
+                      (input)="toDate = validateInput(toDate, dpToDate.value)">
+   <input hidden
+                      #dpFromDate
+                      class="form-control" placeholder="yyyy-mm-dd"
+                      name="dpFromDate"
+                      [value]="formatter.format(fromDate)"
+                      (input)="fromDate = validateInput(fromDate, dpFromDate.value)"
+                      >
+  <!--Hidden-->
+  <!--Calendar Footer-->
+    <ng-template #footerTemplate>
+    <hr class="my-0">
+    <button class="btn btn-secondary btn-sm m-2 float-right" (click)="datepicker.close()">Confirmar</button>
+    </ng-template>
+  <!--Calendar Footer-->
+</div>
+
+              <div class="row">
+                <div class="form-group col-lg-6">
+                  <label style="color:#00506a; font-weight: bold;" class="form-label">Adultos</label>
                   <div class="input-group">
-                    <input hidden
-                           #dpFromDate
-                           class="form-control" placeholder="yyyy-mm-dd"
-                           name="dpFromDate"
-                           [value]="formatter.format(fromDate)"
-                           (input)="fromDate = validateInput(fromDate, dpFromDate.value)"
-                           >
-                    <input #rango
-                            class="form-control col-lg-8"
-                            [value]="rangoFechas(dpFromDate.value,dpToDate.value)">
                     <div class="input-group-append">
-                      <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button">
-                        <i class="fa fa-calendar icon"></i>
+                      <button style="background-color: transparent;border-right: 2px solid #e6e9ed; border-left: 2px solid #dadcdf; border-top : 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" class="btn btn-secondary" (click)="minus()" type="button" ng-click="countVal=countVal+1">
+                        <i class="fa fa-minus">
+                        </i>
+                      </button>
+                    </div>
+                    <input
+                      style="background-color: #e6e9ed; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;  border-left: 2px solid #e6e9ed;"
+                      class="input-group form-control form-control-lg form-control-solid text-center"
+                      #controladultos
+                      placeholder=""
+                      type="number"
+                      max="6"
+                      name="adultos"
+                      [value]="quantity"
+                      formControlName="adultos"
+                      [class.is-invalid]="isControlInvalid('adultos')"
+                      [class.is-valid]="isControlValid('adultos')"
+                      >
+                      <div
+                      class="invalid-feedback"
+                      *ngIf="controlHasError('max', 'adultos')"
+                      >
+                      Maximo {{maxAdultos}} Adultos
+                      </div>
+                    <div class="input-group-append">
+                      <button style="border-right: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf; background-color: transparent;" class="btn btn-secondary" (click)="plus()" type="button">
+                        <i class="fa fa-plus">
+                        </i>
+                      </button>
+                    </div>
+
+
+                  </div>
+                </div>
+
+                <div class="form-group col-lg-6">
+
+                  <label style="color:#00506a; font-weight: bold;" class="form-label">Niños</label>
+                  <div class="input-group">
+                    <div class="input-group-append">
+                      <button style="background-color: transparent; border-left: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" class="btn btn-secondary" (click)="minusNin()" type="button">
+                        <i class="fa fa-minus">
+                        </i>
+                      </button>
+                    </div>
+                    <input
+                      style="background-color: #e6e9ed; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf; border-left: 2px solid #e6e9ed;"
+                      type="number"
+                      max="6"
+                      class="input-group form-control form-control-lg form-control-solid text-center" placeholder=""
+                      name="ninos"
+                      [value]="quantityNin"
+                      value={{huesped.ninos}}
+                      formControlName="ninos"
+                      [class.is-invalid]="isControlInvalid('ninos')"
+                      [class.is-valid]="isControlValid('ninos')"
+                      >
+                    <div class="input-group-append"
+                      class="invalid-feedback"
+                      *ngIf="controlHasError('maxlength', 'ninos')"
+                    >
+                      Maximo {{maxNinos}} Niños
+                    </div>
+                    <div class="input-group-append">
+                      <button style="background-color: transparent; border-right: 2px solid #dadcdf; border-top: 2px solid #dadcdf; border-bottom: 2px solid #dadcdf;" class="btn btn-secondary" (click)="plusNin()" type="button">
+                        <i class="fa fa-plus">
+                        </i>
                       </button>
                     </div>
                   </div>
-              </div>
-
-              <!-- <div class="form-group col-lg-6"> -->
-                <!-- <label class="form-label">Salida</label> -->
-                <!-- <div class="input-group"> -->
-                  <input hidden #dpToDate
-                         class="form-control" placeholder="yyyy-mm-dd"
-                         name="dpToDate"
-                         [value]="formatter.format(toDate)"
-                         (input)="toDate = validateInput(toDate, dpToDate.value)">
-                  <!-- <div class="input-group-append"> -->
-                    <!-- <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button">
-                      <i class="fa fa-calendar icon"></i>
-                    </button> -->
-                  <!-- </div> -->
-                <!-- </div> -->
-             <!-- </div> -->
-
-
-                <ng-template #footerTemplate>
-                  <hr class="my-0">
-                  <!-- <button class="btn btn-primary btn-sm m-2 float-left" (click)="model=today d.close()">Today</button> -->
-                  <button class="btn btn-secondary btn-sm m-2 float-right" (click)="datepicker.close()">Confirmar</button>
-                </ng-template>
-
-
-                 <div  class="form-group col-lg-4">
-                    <div class="input-group">
-                     <label>Noches:</label>
-                     </div>
-                     <label style="padding-left: 30%;" class="font-weight-bold h1 text-right">{{huesped.noches}}</label>
-                 </div>
-
-
-
-              <div class="form-group col-lg-6">
-
-                <label class="form-label">Adultos</label>
-                <div class="input-group">
-                  <div class="input-group-append">
-                    <button class="btn btn-secondary" (click)="minus()" type="button" ng-click="countVal=countVal+1">
-                      <i class="fa fa-minus">
-                      </i>
-                    </button>
-                  </div>
-                  <input
-                    class="input-group form-control form-control-lg form-control-solid text-center"
-                    #controladultos
-                    placeholder=""
-                    type="number"
-                    max="6"
-                    name="adultos"
-                    [value]="quantity"
-                    formControlName="adultos"
-                    [class.is-invalid]="isControlInvalid('adultos')"
-                    [class.is-valid]="isControlValid('adultos')"
-                    >
-                    <div
-                    class="invalid-feedback"
-                    *ngIf="controlHasError('max', 'adultos')"
-                    >
-                    Maximo {{maxAdultos}} Adultos
-                    </div>
-                  <div class="input-group-append">
-                    <button class="btn btn-secondary" (click)="plus()" type="button">
-                      <i class="fa fa-plus">
-                      </i>
-                    </button>
-                  </div>
-
-
-                </div>
-              </div>
-
-              <div class="form-group col-lg-6">
-
-                <label class="form-label">Niños</label>
-                <div class="input-group">
-                  <div class="input-group-append">
-                    <button class="btn btn-secondary" (click)="minusNin()" type="button">
-                      <i class="fa fa-minus">
-                      </i>
-                    </button>
-                  </div>
-                  <input
-                  type="number"
-                  max="6"
-                  class="input-group form-control form-control-lg form-control-solid text-center" placeholder=""
-                    name="ninos"
-                    [value]="quantityNin"
-                    value={{huesped.ninos}}
-                    formControlName="ninos"
-                    [class.is-invalid]="isControlInvalid('ninos')"
-                    [class.is-valid]="isControlValid('ninos')"
-                    >
-                  <div class="input-group-append"
-                    class="invalid-feedback"
-                    *ngIf="controlHasError('maxlength', 'ninos')"
-                  >
-                    Maximo {{maxNinos}} Niños
-                  </div>
-                  <div class="input-group-append">
-                    <button class="btn btn-secondary" (click)="plusNin()" type="button">
-                      <i class="fa fa-plus">
-                      </i>
-                    </button>
-                  </div>
                 </div>
               </div>
 
 
-              <div class="col-lg-12">
-                <label class="input-label">Habitación
-                    <select
-                        class="form-control form-control-lg form-control-solid"
-                        name="habitacion"
-                        formControlName="habitacion"
-                        (change)="habValue($event)"
-                      >
-                      <option selected value="0">Selecciona Tipo de Cuarto</option>
-                      <option value="1">Todos los Cuartos</option>
-                      <ng-container *ngFor="let tipoCuarto of codigoCuarto">
-                        <option> {{tipoCuarto.replace("_"," ")}} </option>
-                      </ng-container>
-                    </select>
-                </label>
+              <div class="row">
+                <label style="color:#00506a; font-weight: bold;" class="form-label" >Habitación </label>
+                <div class="col-lg-12">
+                      <select
+                          class="form-control form-control-lg form-control-solid"
+                          name="habitacion"
+                          formControlName="habitacion"
+                          (change)="habValue($event)"
+                        >
+                        <option selected value="0">-- Cualquiera ---</option>
+                        <option value="1">Todos los Cuartos</option>
+                        <ng-container *ngFor="let tipoCuarto of codigoCuarto">
+                          <option> {{tipoCuarto.replace("_"," ")}} </option>
+                        </ng-container>
+                      </select>
+                </div>
               </div>
 
+<br>
+
+          <div class="row">
               <div class="col-lg-12">
-                  <div class="input-group-append">
+                  <div>
                     <button
-                        class="btn btn-success text-center"
+                      style="background-color: #ffce54;"
+                        class="btn btn-block"
                         (click)="buscaDispo();setStep(1) "
                         type="button"
                         > Buscar Disponibilidad
                     </button>
                   </div>
               </div>
+          </div>
       </div>
-    </div>
 
 
 
@@ -315,7 +316,13 @@
       </mat-accordion>
      </ng-container>
 
-    <div class="overlay overlay-block cursor-default modal-body" style="background-color: rgb(224, 224, 224);">
+     <div style="background-color:#00506a;" class="modal-tittle">
+      <div style="color: white; padding-top: 1%; padding-bottom: 1%;" class="modal-title h5 col-12 text-center">
+        Agrega Húesped
+      </div>
+  </div>
+
+    <div class="overlay overlay-block cursor-default modal-body" style="background-color: #dadcdf">
       <div class="form-group">
         <div class="row">
           <label class="form-label" for="form1">Buscar en Historico</label>
@@ -468,14 +475,15 @@
 
 
 
-    <div style="background-color:rgba(17, 37, 146, 0.795);" class="modal-header">
+    <div style="background-color:#00506a;" class="modal-header">
       <div style="text-align: center; color: white;" class="modal-title h4 col-12 text-center "
         id="example-modal-sizes-title-lg">
-        Tipo de Reserva
+       Confirmar el Tipo de Reserva
         <div class="form-group row">
           <div class="form-group col-lg-6 ">
                 <button
-                class="btn btn-success btn-block"
+                class="btn btn-block"
+                style="background-color:#99d284 ;"
                 type="submit"
                 name="estatus"
                 (click)="setEstatus(1)"
@@ -485,7 +493,8 @@
           </div>
           <div class="form-group col-lg-6 ">
                 <button
-                class="btn btn-warning btn-block"
+                class="btn btn-block"
+                style="background-color:#fac34e ;"
                 type="submit"
                 name="estatus"
                 (click)="setEstatus(2); "
@@ -495,16 +504,18 @@
           </div>
           <div class="form-group col-lg-6 ">
                 <button
-                class="btn btn-secondary btn-block"
+                class="btn btn-block"
+                style="background-color:#d0aaec ;"
                 type="submit"
-                (click)="setEstatus(6)"
+                (click)="setEstatus(5)"
                 >
-                  Bloqueo / Sin Llegada
+                  Reserva Uso Interno
                 </button>
           </div>
           <div class="form-group col-lg-6">
                 <button
-                  class="btn btn-primary btn-block"
+                  class="btn btn-block"
+                  style="background-color:#fab3db ;"
                   type="submit"
                   value="7"
                   (click)="setEstatus(7)"
