Diseño Customers Report
- Cambio de diseño en reporte customer Reports

--- a/src/app/_metronic/shared/crud-table/components/paginator/paginator.component.html
+++ b/src/app/_metronic/shared/crud-table/components/paginator/paginator.component.html
@@ -28,7 +28,7 @@
     <option class="btn" *ngFor="let ps of pageSizes">
       {{ ps }}
     </option></select
-  ><span class="react-bootstrap-table-pagin ation-total"
+  ><span style="color: white;" class="react-bootstrap-table-pagin ation-total"
     >&nbsp;Showing rows {{ paginator.page }} to&nbsp;{{
       paginator.pageSize
     }}
