--- a/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
@@ -81,24 +81,24 @@
       <label style="color:#00506a; font-weight: bold;" class="form-label">Numero de Habitacion </label>
       <div class="col-lg-12">
           <mat-select #matSelect
-                      (change)="cuartoValue($event)"
                       class="form-control form-control-lg form-control-solid"
                       [formControl]="habitacionfb"
                       multiple
                       placeholder="-- Cualquiera -- ">
-                      >
+
             <!-- <mat-select-trigger>
               {{habitacionfb.value ? habitacionfb.value[0] : ''}}
               <span *ngIf="habitacionfb.value?.length > 1" class="example-additional-selection">
                 ({{habitacionfb.value.length - 1}} {{habitacionfb.value?.length === 2 ? 'Otra' : 'Otras'}})
               </span>
             </mat-select-trigger> -->
-              <div>
-                <mat-option *ngFor="let numero of infoCuarto" [value]="numero">{{numero.Numero}}</mat-option>
-              </div>
             <footer>
-              <button style="background-color: #319dd7;" (click)="okayChecked()" mat-raised-button class="btn ">Confirmar</button>
+              <button style="background-color: #319dd7;" (click)="okayChecked()" mat-raised-button class="btn btn-blocked">Confirmar</button>
             </footer>
+            <!-- <mat-option (click)="Allchecked($event)">Todos</mat-option> -->
+              <div>
+                <mat-option #matOption (click)="cuartoValue(matOption.selected,matOption.value);" *ngFor="let numero of infoCuarto" [value]="numero">{{numero.Numero}}</mat-option>
+              </div>
           </mat-select>
       </div>
     </div>
@@ -149,9 +149,9 @@
 
 
 
-<div  class="table-responsive angular-bootstrap-table">
+<div class="table-responsive angular-bootstrap-table">
   <div class="font-weight-bold text-uppercase modal-header">Lista de Bloqueos </div>
-  <table  class="table table-head-custom table-vertical-center overflow-hidden">
+  <table style="overflow-y: 100px;" class="table table-head-custom table-vertical-center ">
     <thead>
       <th>
         Habitacion
@@ -174,8 +174,16 @@
     <tbody>
       <ng-container *ngFor="let bloqueos of listaBloqueos">
         <tr>
-          <td >{{ bloqueos.Habitacion}}</td>
-          <td >{{ bloqueos.Cuarto}}</td>
+          <td>
+            <ng-container *ngFor="let habitacion of bloqueos.Habitacion">
+              {{habitacion}}
+            </ng-container>
+          </td>
+          <td>
+            <ng-container *ngFor="let cuartos of bloqueos.Cuarto">
+              {{cuartos}}
+            </ng-container>
+          </td>
           <td >{{ bloqueos.Desde}} - {{ bloqueos.Hasta}}</td>
           <td >
             <section class="example-section">
