--- a/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
+++ b/src/app/pages/reportes/customers/components/bloqueo-customer-modal/bloqueo-reserva-modal.component.html
@@ -151,7 +151,7 @@
 
 <div class="table-responsive angular-bootstrap-table">
   <div class="font-weight-bold text-uppercase modal-header">Lista de Bloqueos </div>
-  <table style="overflow-y: 100px;" class="table table-head-custom table-vertical-center ">
+  <table  class="table table-head-custom table-vertical-center ">
     <thead>
       <th>
         Habitacion
